syntax = "proto3";
package pastel.supernode;

option go_package = "github.com/pastelnetwork/pastel/x/supernode/types";

import "gogoproto/gogo.proto";

enum SuperNodeState {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  SUPERNODE_STATE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "Unspecified"];
  SUPERNODE_STATE_ACTIVE = 1 [(gogoproto.enumvalue_customname) = "Active"];
  SUPERNODE_STATE_DISABLED = 2 [(gogoproto.enumvalue_customname) = "Disabled"];
  SUPERNODE_STATE_STOPPED = 3 [(gogoproto.enumvalue_customname) = "Stopped"];
  SUPERNODE_STATE_PENALIZED = 4 [(gogoproto.enumvalue_customname) = "Penalized"];
}
